--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -70,6 +70,7 @@ $card-bg:               #ffffff !default;
 $card-border-radius:    2px !default;
 $card-box-shadow:       $shadow-2dp !default;
 $card-box-shadow-hover: $shadow-8dp !default;
+$card-btn-color:        rgba(0, 0, 0, .54) !default;
 $card-inner-spacer-x:   .5rem !default;
 $card-inner-spacer-y:   1rem !default;
 $card-margin-x:         .5rem !default;
