--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -6,6 +6,7 @@
 // - Strip unit
 // - Table
 // - Text field
+// - Typography
 
 
 
@@ -15,3 +16,4 @@
 @import 'mixins/strip-unit';
 @import 'mixins/table';
 @import 'mixins/text-field';
+@import 'mixins/typography';
