--- a/scss/common/_base.scss
+++ b/scss/common/_base.scss
@@ -20,3 +20,43 @@ html {
 .wrap {
   padding: 0;
 }
+
+
+
+// Headings
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: unquote('$primary');
+  font-family: inherit;
+  margin-top: 0;
+  margin-bottom: .5rem;
+}
+
+h1 {
+  @include typography-h1;
+}
+
+h2 {
+  @include typography-h2;
+}
+
+h3 {
+  @include typography-h3;
+}
+
+h4 {
+  @include typography-h4;
+}
+
+h5 {
+  @include typography-h5;
+}
+
+h6 {
+  @include typography-h6;
+}
