WIP: post styles
update topic title editing button size

--- a/scss/common/_post.scss
+++ b/scss/common/_post.scss
@@ -186,7 +186,7 @@ nav {
   a {
     &.edit-topic {
       color: unquote('$tertiary');
-      font-size: $material-icon-size;
+      font-size: $font-size-base;
       line-height: 1;
       vertical-align: middle;
 
