--- a/scss/common/_cooked.scss
+++ b/scss/common/_cooked.scss
@@ -23,9 +23,11 @@ div {
   }
 
   img {
-    &:not(.thumbnail) {
-      height: auto;
-      max-width: 100%;
+    .topic-body .contents & {
+      &:not(.thumbnail) {
+        height: auto;
+        max-width: 100%;
+      }
     }
   }
 
