WIP: post styles
update topic title font

--- a/common/common.scss
+++ b/common/common.scss
@@ -1160,6 +1160,8 @@ nav.post-controls .actions button .read-icon::before {
   font-weight: 400;
   letter-spacing: 0;
   line-height: 1.066667;
+  font-family: "Roboto Slab", Georgia, "Times New Roman", Times, serif;
+  font-weight: normal;
   overflow: visible;
 }
 
