WIP: post styles
update topic title vertical rhythm

--- a/common/common.scss
+++ b/common/common.scss
@@ -1126,7 +1126,7 @@ nav.post-controls .actions button .read-icon::before {
 }
 
 #topic-title {
-  margin-bottom: 0.5rem;
+  margin-bottom: 1rem;
   padding-top: 0;
 }
 #topic-title a.edit-topic {
@@ -1162,6 +1162,7 @@ nav.post-controls .actions button .read-icon::before {
   line-height: 1.066667;
   font-family: "Roboto Slab", Georgia, "Times New Roman", Times, serif;
   font-weight: normal;
+  margin: 0 0 1rem;
   overflow: visible;
 }
 
