WIP: post styles
prevent collapsing blockquote shrinking

--- a/common/common.scss
+++ b/common/common.scss
@@ -365,6 +365,9 @@ div.poll {
   display: block;
 }
 
+aside.quote blockquote {
+  width: auto !important;
+}
 aside.quote .quote-controls .back::before,
 aside.quote .quote-controls .quote-other-topic::before {
   font-family: 'Material Icons';
