--- a/scss/common/_cooked-aside.scss
+++ b/scss/common/_cooked-aside.scss
@@ -1,5 +1,9 @@
 aside {
   &.quote {
+    blockquote {
+      width: auto !important;
+    }
+
     .quote-controls {
       .back,
       .quote-other-topic {
