--- a/scss/common/_cooked-aside.scss
+++ b/scss/common/_cooked-aside.scss
@@ -1,4 +1,18 @@
 aside {
+  &.onebox {
+    background-color: unquote('$secondary');
+    border: 0;
+    margin-right: ($card-padding-x * -1);
+    margin-bottom: $card-inner-spacer-y;
+    margin-left: ($card-padding-x * -1);
+    padding: $card-padding-y $card-padding-x;
+
+    + .onebox {
+      border-top: 1px solid $card-bg;
+      margin-top: ($card-padding-y * -1);
+    }
+  }
+
   &.quote {
     blockquote {
       width: auto !important;
