--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -2,6 +2,7 @@
 //
 // - Basics
 //   - Shadows
+//   - Spacers
 //   - Typography
 // - Button
 // - Card
@@ -31,25 +32,35 @@ $shadow-1dp:     none !default;
 
 
 
+// Basics - Spacers
+
+$spacer-xs: 4px !default;
+$spacer-sm: 8px !default;
+$spacer:    16px !default;
+$spacer-lg: 24px !default;
+$spacer-xl: 48px !default;
+
+
+
 // Basics - Typography
 
 $font-family-monospace:     "Roboto Mono", Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace !default;
 $font-family-sans-serif:    Roboto, -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", Arial, sans-serif !default;
 $font-family-serif:         "Roboto Slab", Georgia, "Times New Roman", Times, serif !default;
 
-$font-size-base:            .875rem !default;
+$font-size-base:            14px !default;
 $font-size-root:            16px !default;
 
-$font-size-display-4:       7rem !default;      // 112px
-$font-size-display-3:       3.5rem !default;    // 56px
-$font-size-display-2:       2.8125rem !default; // 45px
-$font-size-display-1:       2.125rem !default;  // 34px
-$font-size-headline:        1.5rem !default;    // 24px
-$font-size-title:           1.25rem !default;   // 20px
-$font-size-subheading:      1rem !default;      // 16px
-$font-size-body-2:          .875rem !default;   // 14px
-$font-size-body-1:          .875rem !default;   // 14px
-$font-size-caption:         .75rem !default;    // 12px
+$font-size-display-4:       112px !default;
+$font-size-display-3:       56px !default;
+$font-size-display-2:       45px !default;
+$font-size-display-1:       34px !default;
+$font-size-headline:        24px !default;
+$font-size-title:           20px !default;
+$font-size-subheading:      16px !default;
+$font-size-body-2:          14px !default;
+$font-size-body-1:          14px !default;
+$font-size-caption:         12px !default;
 
 $font-weight-bold:          700 !default;
 $font-weight-medium:        500 !default;
@@ -91,7 +102,7 @@ $line-height-body-2:        1.428571 !default; // 20px
 $line-height-body-1:        1.428571 !default; // 20px
 $line-height-caption:       1.5 !default;      // 18px
 
-$material-icon-size:        (24px / $font-size-root * 1rem) !default;
+$material-icon-size:        24px !default;
 
 
 
@@ -104,28 +115,28 @@ $btn-border-radius:     2px !default;
 $btn-box-shadow:        $shadow-2dp !default;
 $btn-box-shadow-active: $shadow-8dp !default;
 $btn-color:             rgba(0, 0, 0, .87) !default;
-$btn-height:            2.25rem !default;
-$btn-font-size:         .875rem !default;
+$btn-height:            36px !default;
+$btn-font-size:         14px !default;
 $btn-font-weight:       500 !default;
-$btn-padding-x:         1rem !default;
+$btn-padding-x:         16px !default;
 $btn-padding-y:         (($btn-height - $btn-font-size) / 2) !default;
 
 
 
 // Card
 
-$card-avatar-size:      2.25rem !default;
+$card-avatar-size:      36px !default;
 $card-bg:               #ffffff !default;
 $card-border-radius:    2px !default;
 $card-box-shadow:       $shadow-2dp !default;
 $card-box-shadow-hover: $shadow-8dp !default;
 $card-btn-color:        rgba(0, 0, 0, .54) !default;
-$card-inner-spacer-x:   .5rem !default;
-$card-inner-spacer-y:   1rem !default;
-$card-margin-x:         .5rem !default;
-$card-margin-y:         .5rem !default;
-$card-padding-x:        1rem !default;
-$card-padding-y:        1rem !default;
+$card-inner-spacer-x:   $spacer-sm !default;
+$card-inner-spacer-y:   $spacer !default;
+$card-margin-x:         $spacer-sm !default;
+$card-margin-y:         $spacer-sm !default;
+$card-padding-x:        16px !default;
+$card-padding-y:        16px !default;
 
 
 
@@ -133,11 +144,11 @@ $card-padding-y:        1rem !default;
 
 $chip-bg:             rgba(0, 0, 0, .04) !default;
 $chip-box-shadow:     $shadow-2dp !default;
-$chip-font-size:      .8125rem !default;
-$chip-height:         2rem !default;
-$chip-inner-spacer-x: .25rem !default;
-$chip-padding-x:      .75rem !default;
-$chip-padding-y:      .5rem !default;
+$chip-font-size:      13px !default;
+$chip-height:         32px !default;
+$chip-inner-spacer-x: $spacer-xs !default;
+$chip-padding-x:      12px !default;
+$chip-padding-y:      8px !default;
 $chip-width:          $chip-height !default;
 
 
@@ -145,12 +156,12 @@ $chip-width:          $chip-height !default;
 // Header
 
 $header-box-shadow:     $shadow-4dp !default;
-$header-height:         3.5rem !default;
+$header-height:         56px !default;
 $header-item-overlay:   rgba(0, 0, 0, .12) !default;
-$header-inner-spacer-x: .5rem !default;
-$header-margin-y:       1rem !default;
+$header-inner-spacer-x: $spacer-sm !default;
+$header-margin-y:       $spacer !default;
 $header-padding-x:      0 !default;
-$header-padding-y:      .5rem !default;
+$header-padding-y:      8px !default;
 
 
 
@@ -159,11 +170,11 @@ $header-padding-y:      .5rem !default;
 $menu-panel-bg:             #ffffff !default;
 $menu-panel-border-radius:  2px !default;
 $menu-panel-box-shadow:     $shadow-24dp !default;
-$menu-panel-inner-spacer-x: .5rem !default;
-$menu-panel-inner-spacer-y: .5rem !default;
+$menu-panel-inner-spacer-x: $spacer-sm !default;
+$menu-panel-inner-spacer-y: $spacer-sm !default;
 $menu-panel-item-overlay:   rgba(0, 0, 0, .04) !default;
-$menu-panel-padding-x:      1.5rem !default;
-$menu-panel-padding-y:      1.25rem !default;
+$menu-panel-padding-x:      24px !default;
+$menu-panel-padding-y:      20px !default;
 
 
 
@@ -176,19 +187,19 @@ $table-border-width:   1px !default;
 $table-border-color:   #e1e1e1 !default;
 $table-box-shadow:     $shadow-2dp !default;
 $table-margin-x:       auto !default;
-$table-margin-y:       1rem !default;
-$tbody-cell-height:    3rem !default;
-$tbody-cell-padding-x: .75rem !default;
-$tbody-cell-padding-y: .75rem !default;
+$table-margin-y:       $spacer !default;
+$tbody-cell-height:    48px !default;
+$tbody-cell-padding-x: 12px !default;
+$tbody-cell-padding-y: 12px !default;
 $tbody-color:          rgba(0, 0, 0, .87) !default;
 $thead-color-sorting:  rgba(0, 0, 0, .87) !default;
-$tbody-font-size:      .8125rem !default;
-$thead-cell-height:    3.5rem !default;
-$thead-cell-padding-x: .75rem !default;
-$thead-cell-padding-y: .75rem !default;
+$tbody-font-size:      13px !default;
+$thead-cell-height:    56px !default;
+$thead-cell-padding-x: 12px !default;
+$thead-cell-padding-y: 12px !default;
 $thead-color:          rgba(0, 0, 0, .54) !default;
 $thead-color-sorting:  rgba(0, 0, 0, .87) !default;
-$thead-font-size:      .75rem !default;
+$thead-font-size:      12px !default;
 
 
 
@@ -196,9 +207,9 @@ $thead-font-size:      .75rem !default;
 
 $text-field-border-color: rgba(0, 0, 0, .42) !default;
 $text-field-border-width: 1px !default;
-$text-field-font-size:    1rem !default;
-$text-field-height:       2.25rem !default;
-$text-field-margin-x:     .5rem !default;
-$text-field-margin-y:     .5rem !default;
+$text-field-font-size:    16px !default;
+$text-field-height:       36px !default;
+$text-field-margin-x:     $spacer-sm !default;
+$text-field-margin-y:     $spacer-sm !default;
 $text-field-padding-x:    0 !default;
-$text-field-padding-y:    .5rem !default;
+$text-field-padding-y:    8px !default;
