--- a/scss/common/_cooked.scss
+++ b/scss/common/_cooked.scss
@@ -1,7 +1,7 @@
 div {
   &.poll {
     margin-top: 0;
-    margin-bottom: 1rem;
+    margin-bottom: $card-inner-spacer-y;
   }
 }
 
@@ -19,7 +19,7 @@ div {
   h4,
   h5,
   h6 {
-    margin: 0 0 .5rem;
+    margin: 0 0 ($card-inner-spacer-y / 2);
   }
 
   img {
@@ -34,7 +34,7 @@ div {
   > iframe {
     border: 0;
     display: block;
-    margin-bottom: 1rem;
+    margin-bottom: $card-inner-spacer-y;
 
     .topic-body .contents & {
       margin-right: ($card-padding-x * -1);
@@ -54,7 +54,7 @@ div {
 }
 
 .lazyYT-container {
-  margin-bottom: 1rem;
+  margin-bottom: $card-inner-spacer-y;
 
   .topic-body .contents .cooked & {
     margin-right: ($card-padding-x * -1);
@@ -64,13 +64,13 @@ div {
 
     + .lazyYT-container {
       border-top: 1px solid $card-bg;
-      margin-top: -1rem;
+      margin-top: ($card-inner-spacer-y * -1);
     }
   }
 }
 
 .lightbox-wrapper {
-  margin-bottom: 1rem;
+  margin-bottom: $card-inner-spacer-y;
 
   .topic-body .contents .cooked & {
     display: block;
@@ -88,7 +88,7 @@ div {
 
     + a {
       display: block;
-      margin-top: -.5rem;
+      margin-top: ($card-inner-spacer-y / -2);
 
       + p {
         display: block;
