--- a/scss/mixins/_material-icons.scss
+++ b/scss/mixins/_material-icons.scss
@@ -18,7 +18,7 @@
   $roboto-fm-capital-height:  1456 !default;
   $roboto-fm-descender:       512 !default;
 
-  $roboto-capital-height:     (strip-unit($font-size-base) * strip-unit($font-size-root) * strip-unit($line-height-base)) !default;
+  $roboto-capital-height:     (strip-unit($font-size-base) * strip-unit($line-height-base)) !default;
   $roboto-computed-font-size: ($roboto-capital-height / $roboto-fm-capital-height) !default;
   $roboto-distance-bottom:    $roboto-fm-descender !default;
   $roboto-distance-top:       ($roboto-fm-ascender - $roboto-fm-capital-height) !default;
