--- a/common/common.scss
+++ b/common/common.scss
@@ -23,6 +23,7 @@ body {
 }
 
 html {
+  background-color: scale-color($secondary, $lightness: 50%);
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   font-family: Roboto, -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", Arial, sans-serif;
