--- a/scss/common/_base.scss
+++ b/scss/common/_base.scss
@@ -10,6 +10,7 @@ body {
 }
 
 html {
+  background-color: unquote('scale-color($secondary, $lightness: 50%)');
   box-sizing: border-box;
   font-family: $font-family-sans-serif;
   font-size: initial;
