--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -2,6 +2,7 @@
 //
 // - Button
 // - Card
+// - Hover
 // - Material icons
 // - Strip unit
 // - Table
@@ -12,6 +13,7 @@
 
 @import 'mixins/button';
 @import 'mixins/card';
+@import 'mixins/hover';
 @import 'mixins/material-icons';
 @import 'mixins/strip-unit';
 @import 'mixins/table';
